# DiscoAuth

./: .all-contributorsrc  .readthedocs.yaml  CONTRIBUTING.md  Discord_Api.md  LICENSE  README.md  Release-Todo.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  difference-report.md  feature_request.md  feature_request.yml  general-request.md  general_request.yml
.github/workflow/: fixPR.yaml
.github/workflows/: get_cov.yaml  publish.yml  test.yaml
docs/: CHANGELOG.rst  api.rst  bot.rst  cliAPI.rst  conf.py  contributing.rst  deprecate.rst  depreciate.rst  guides.rst  index.md  index.rst  migration.rst  permissions.rst  quickstart.rst  reference.rst  requirements.txt
docs/_themes/furo/: _demo_module.py
docs/_themes/furo/assets/scripts/: furo.js  gumshoe-patched.js
docs/_themes/furo/assets/styles/: _shame.sass  furo-extensions.sass  furo.sass
docs/_themes/furo/assets/styles/base/: _index.sass  _screen-readers.sass  _theme.sass  _typography.sass
docs/_themes/furo/assets/styles/components/: _footer.sass  _index.sass  _search.sass  _table_of_contents.sass
docs/_themes/furo/assets/styles/content/: _blocks.sass  _captions.sass  _gui-labels.sass  _images.sass  _index.sass  _indexes.sass  _lists.sass  _math.sass  _misc.sass  _rubrics.sass  _sidebar.sass  _tables.sass  _target.sass
docs/_themes/furo/assets/styles/extensions/: _copybutton.sass  _index.sass  _readthedocs.sass  _sphinx-design.sass  _sphinx-inline-tabs.sass  _sphinx-panels.sass
docs/_themes/furo/assets/styles/variables/: _fonts.scss  _icons.scss  _index.sass  _layout.scss  _spacing.scss
docs/_themes/furo/theme/furo/: domainindex.html  genindex.html  globaltoc.html  layout.html  localtoc.html  search.html  theme.conf
docs/_themes/furo/theme/furo/components/: edit-this-page.html
docs/_themes/furo/theme/furo/partials/: _head_css_variables.html  icons.html
docs/_themes/furo/theme/furo/sidebar/: brand.html  ethical-ads.html  navigation.html  rtd-versions.html  scroll-end.html  scroll-start.html  variant-selector.html
docs/deprecated/: api.rst
docs/guides/: quickstart.md
docs/reference/: index.md
docs/reference/discord/: index.md  user.md
docs/reference/package/: index.md
docs/source/: about.rst  api.rst  bot.rst  cliAPI.rst  conf.py  contributing.rst  depreceate.rst  guides.rst  index.rst  permissions.rst  quickstart.rst  setup.rst
docs/user_guide/: getting_started.md
src/DisOAuth/: __init__.py  __main__.py  __version__.py  common.py  exceptions.py  models.py  url.py
src/DisOAuth/deprecated/: url.py
src/discoauth/: __init__.py  __main__.py  __version__.py  exceptions.py  models.py  url.py
src/discoauth/deprecated/: url.py
tests/: Dauth_test.py  Dpermissions_test.py  api.py  api_test.py  auth_test.py  auth_testD.py  permissions_test.py
(+4 files in other folders)
